k8s/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: 23bcs021/backend-monitoring-dashboard:latest
          ports:
            - containerPort: 80 # Nginx port inside the dashboard container

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
