k8s/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment  # The name of the manager handling this pod
spec:
  replicas: 1  # We only need one instance of RabbitMQ running
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management
          ports:
            - containerPort: 5672   
            - containerPort: 15672 
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "-q", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service  # Matches the RABBITMQ_URL from config.yaml!
spec:
  selector:
    app: rabbitmq  # This connects the Service to the Pods with this label
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
